--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
     },
     "dependencies": {
         "body-parser": "^1.20.2",
-        "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.21.2",
-        "mongoose": "^7.1.0"
+        "mongoose": "^7.1.0",
+        "node-fetch": "^3.3.2"
     },
     "devDependencies": {
-        "@types/cors": "^2.8.17",
         "@types/express": "^5.0.0",
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.1.6"
